// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KTableLegacy default has hover class when passed 1`] = `
<table class="k-table k-table-legacy has-hover side-border">
  <thead>
    <tr>
      <th class="sortable"><span class="">
              Name
            </span></th>
      <th class=""><span class="">
              ID
            </span></th>
      <th class=""><span class="">
              Enabled
            </span></th>
      <th class=""><span class="sr-only">
              actions
            </span></th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>Basic Auth</td>
      <td>517526354743085</td>
      <td>true</td>
      <td></td>
    </tr>
    <tr>
      <td>Website Desktop</td>
      <td>328027447731198</td>
      <td>false</td>
      <td></td>
    </tr>
    <tr>
      <td>Android App</td>
      <td>405383051040955</td>
      <td>true</td>
      <td></td>
    </tr>
  </tbody>
</table>
`;

exports[`KTableLegacy default has small class when passed 1`] = `
<table class="k-table k-table-legacy has-hover is-small side-border">
  <thead>
    <tr>
      <th class="sortable"><span class="">
              Name
            </span></th>
      <th class=""><span class="">
              ID
            </span></th>
      <th class=""><span class="">
              Enabled
            </span></th>
      <th class=""><span class="sr-only">
              actions
            </span></th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>Basic Auth</td>
      <td>517526354743085</td>
      <td>true</td>
      <td></td>
    </tr>
    <tr>
      <td>Website Desktop</td>
      <td>328027447731198</td>
      <td>false</td>
      <td></td>
    </tr>
    <tr>
      <td>Android App</td>
      <td>405383051040955</td>
      <td>true</td>
      <td></td>
    </tr>
  </tbody>
</table>
`;

exports[`KTableLegacy default renders link in action slot 1`] = `
<table class="k-table k-table-legacy has-hover side-border">
  <thead>
    <tr>
      <th class="sortable"><span class="">
              Name
            </span></th>
      <th class=""><span class="">
              ID
            </span></th>
      <th class=""><span class="">
              Enabled
            </span></th>
      <th class=""><span class="sr-only">
              actions
            </span></th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>Basic Auth</td>
      <td>517526354743085</td>
      <td>true</td>
      <td><a href="#">Link</a></td>
    </tr>
    <tr>
      <td>Website Desktop</td>
      <td>328027447731198</td>
      <td>false</td>
      <td><a href="#">Link</a></td>
    </tr>
    <tr>
      <td>Android App</td>
      <td>405383051040955</td>
      <td>true</td>
      <td><a href="#">Link</a></td>
    </tr>
  </tbody>
</table>
`;

exports[`KTableLegacy sorting should have sortable class when passed 1`] = `
<table class="k-table k-table-legacy has-hover side-border">
  <thead>
    <tr>
      <th class="sortable"><span class="">
              Name
            </span></th>
      <th class=""><span class="">
              ID
            </span></th>
      <th class=""><span class="">
              Enabled
            </span></th>
      <th class=""><span class="sr-only">
              actions
            </span></th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>Basic Auth</td>
      <td>517526354743085</td>
      <td>true</td>
      <td></td>
    </tr>
    <tr>
      <td>Website Desktop</td>
      <td>328027447731198</td>
      <td>false</td>
      <td></td>
    </tr>
    <tr>
      <td>Android App</td>
      <td>405383051040955</td>
      <td>true</td>
      <td></td>
    </tr>
  </tbody>
</table>
`;
